SOS and HWB description update
SOS and HWB description update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2609,7 +2609,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-26T14:11:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2888,11 +2888,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DmIUTAH1TXft
-								KeTk935EBg==
+								EjhnOC6m+Fs3
+								Rdxx9sLY5g==
 								</data>
 								<key>Size</key>
-								<integer>71184</integer>
+								<integer>71363</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T13:41:24Z</date>
+						<date>2018-06-26T14:53:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3144,11 +3144,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t0cR8ouhcZs4
-								2KQJjaazhA==
+								6BFQUPQeIBuD
+								hpOLrB4dcA==
 								</data>
 								<key>Size</key>
-								<integer>60536</integer>
+								<integer>61188</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7157,7 +7157,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T13:41:24Z</date>
+						<date>2018-06-26T14:52:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7206,11 +7206,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DkJA+22y9L7m
-								qQnHRwrBSg==
+								Qv1bJy92Pq2l
+								m1C29PRBKQ==
 								</data>
 								<key>Size</key>
-								<integer>4134</integer>
+								<integer>4198</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7223,7 +7223,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T13:41:24Z</date>
+						<date>2018-06-26T14:33:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8262,11 +8262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								UU94Ku/+iPbb
+								Jjgo1/q23w==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3697</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
