--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-26T14:11:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DmIUTAH1TXft
-								KeTk935EBg==
+								EjhnOC6m+Fs3
+								Rdxx9sLY5g==
 								</data>
 								<key>Size</key>
-								<integer>71184</integer>
+								<integer>71363</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
