made banner photo less hi-res
made banner photo less hi-res

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2609,7 +2609,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T14:11:53Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2618,11 +2618,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T14:53:23Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2914,11 +2914,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
@@ -4119,7 +4119,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4128,11 +4128,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/pin.jpg</key>
 							<dict>
@@ -4478,8 +4478,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								q1zsI1ZDphSx
-								1iwt9QqGXw==
+								1fX3rSAFYOLp
+								tzd7yBrAhQ==
 								</data>
 								<key>Size</key>
 								<integer>114868</integer>
@@ -4761,7 +4761,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4770,11 +4770,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/pin.jpg</key>
 							<dict>
@@ -5110,8 +5110,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aOLQLmXWND1t
-								oDut7y86XQ==
+								gZPRrKzy9p5I
+								gHLumSD55w==
 								</data>
 								<key>Size</key>
 								<integer>105960</integer>
@@ -7157,7 +7157,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T14:52:24Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7206,11 +7206,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Qv1bJy92Pq2l
-								m1C29PRBKQ==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4198</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7223,7 +7223,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T14:33:45Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8262,11 +8262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UU94Ku/+iPbb
-								Jjgo1/q23w==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3697</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
