--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-26T14:11:53Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/small_109872.jpg</key>
 							<dict>
