--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-27T16:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YrxnjL7CjYmG
-								cFoeLiJcvQ==
+								uSoquum6mCty
+								uIn2fhh+hw==
 								</data>
 								<key>Size</key>
-								<integer>23667591</integer>
+								<integer>571092</integer>
 							</dict>
 							<key>files/pin.jpg</key>
 							<dict>
@@ -392,8 +392,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								q1zsI1ZDphSx
-								1iwt9QqGXw==
+								1fX3rSAFYOLp
+								tzd7yBrAhQ==
 								</data>
 								<key>Size</key>
 								<integer>114868</integer>
