--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5911,7 +5911,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-06-27T17:08:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6010,11 +6010,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFtNrvH6PW2X
-								ocUB+BfPXw==
+								DOaff6EvpYZ8
+								uL+/UpcmwQ==
 								</data>
 								<key>Size</key>
-								<integer>50135</integer>
+								<integer>50120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6351,7 +6351,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:44Z</date>
+						<date>2018-06-27T17:08:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6410,11 +6410,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wp+7L8popGs7
-								qH5buSAIlg==
+								vfH1h90V2Pmo
+								gI+z8DTZYQ==
 								</data>
 								<key>Size</key>
-								<integer>32755</integer>
+								<integer>32740</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
