--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:44Z</date>
+						<date>2018-06-27T17:08:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wp+7L8popGs7
-								qH5buSAIlg==
+								vfH1h90V2Pmo
+								gI+z8DTZYQ==
 								</data>
 								<key>Size</key>
-								<integer>32755</integer>
+								<integer>32740</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
