--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5593,7 +5593,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-02T15:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5672,11 +5672,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RzyecxZN4W6U
-								U/+s9s5aGw==
+								/ixm1b6vFkcD
+								az5f5ek55w==
 								</data>
 								<key>Size</key>
-								<integer>34743</integer>
+								<integer>34839</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
