--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4495,7 +4495,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-05T15:35:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4744,11 +4744,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nL7blbodPo1m
-								r6B+IJQ1Ig==
+								6xZGx5sYgPoX
+								Sknks1OoOQ==
 								</data>
 								<key>Size</key>
-								<integer>90569</integer>
+								<integer>90564</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
