added hotel cutoff dates
added hotel cutoff dates

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-06T15:13:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gZPRrKzy9p5I
-								gHLumSD55w==
+								6T7PRem1OhFI
+								hPh3cJ/vQA==
 								</data>
 								<key>Size</key>
-								<integer>105960</integer>
+								<integer>106015</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
