--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4119,7 +4119,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-06T15:13:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4478,11 +4478,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1fX3rSAFYOLp
-								tzd7yBrAhQ==
+								jrNdb8XkMiY1
+								XBsdgFtNtw==
 								</data>
 								<key>Size</key>
-								<integer>114868</integer>
+								<integer>114919</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4761,7 +4761,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-06T15:13:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5110,11 +5110,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gZPRrKzy9p5I
-								gHLumSD55w==
+								6T7PRem1OhFI
+								hPh3cJ/vQA==
 								</data>
 								<key>Size</key>
-								<integer>105960</integer>
+								<integer>106015</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
