--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-06T15:13:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1fX3rSAFYOLp
-								tzd7yBrAhQ==
+								jrNdb8XkMiY1
+								XBsdgFtNtw==
 								</data>
 								<key>Size</key>
-								<integer>114868</integer>
+								<integer>114919</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
