Changed topic on CNWW north thing
Changed topic on CNWW north thing

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-06T17:48:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lg1WD6PCPu6m
-								iPbbVFrfDg==
+								ktc9X1TuLq9h
+								5/cMwSITZw==
 								</data>
 								<key>Size</key>
-								<integer>60341</integer>
+								<integer>60353</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
