added participants to Symp
added participants to Symp

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2609,7 +2609,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2888,11 +2888,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EjhnOC6m+Fs3
-								Rdxx9sLY5g==
+								rwhrApo+rcnV
+								v3I0CRPLUw==
 								</data>
 								<key>Size</key>
-								<integer>71363</integer>
+								<integer>69180</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2905,7 +2905,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3070,6 +3070,16 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3YW7fsJffz3y
+								xSIicOAdcA==
+								</data>
+								<key>Size</key>
+								<integer>553274</integer>
+							</dict>
 							<key>files/stacks-image-b5d4a25-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3124,11 +3134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mSEEGPZMg5Uo
-								aeWcV9d7+A==
+								03s7s+AS3mgh
+								stSDdWB7jA==
 								</data>
 								<key>Size</key>
-								<integer>119985</integer>
+								<integer>121083</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -3144,11 +3154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6BFQUPQeIBuD
-								hpOLrB4dcA==
+								2a+Uxqteo/fz
+								r+P3ZoiRww==
 								</data>
 								<key>Size</key>
-								<integer>61188</integer>
+								<integer>62146</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4119,7 +4129,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-06T15:13:03Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4448,11 +4458,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Swk9gLuj3+H8
-								giNAXUbp0Q==
+								4A9qwKPpwRic
+								1ZF89qQ/kw==
 								</data>
 								<key>Size</key>
-								<integer>150675</integer>
+								<integer>148135</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -4478,11 +4488,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jrNdb8XkMiY1
-								XBsdgFtNtw==
+								nhlpgShLBXCB
+								welAiDnfgA==
 								</data>
 								<key>Size</key>
-								<integer>114919</integer>
+								<integer>114845</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4761,7 +4771,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-06T15:13:03Z</date>
+						<date>2018-07-09T13:56:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5080,11 +5090,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FVzomJx85uU9
-								9zcQAVPTYg==
+								UHt5Z3SQNdxz
+								Kt539aaJRw==
 								</data>
 								<key>Size</key>
-								<integer>154849</integer>
+								<integer>154541</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -5110,11 +5120,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6T7PRem1OhFI
-								hPh3cJ/vQA==
+								PdkeYWQIkw4O
+								2FEjz/MWhg==
 								</data>
 								<key>Size</key>
-								<integer>106015</integer>
+								<integer>106376</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7157,7 +7167,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7206,11 +7216,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DkJA+22y9L7m
-								qQnHRwrBSg==
+								GCcPrA4m8eBo
+								BN2uGveqCw==
 								</data>
 								<key>Size</key>
-								<integer>4134</integer>
+								<integer>4198</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7223,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8262,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								UU94Ku/+iPbb
+								Jjgo1/q23w==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3697</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
