--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-06T15:13:03Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Swk9gLuj3+H8
-								giNAXUbp0Q==
+								4A9qwKPpwRic
+								1ZF89qQ/kw==
 								</data>
 								<key>Size</key>
-								<integer>150675</integer>
+								<integer>148135</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jrNdb8XkMiY1
-								XBsdgFtNtw==
+								nhlpgShLBXCB
+								welAiDnfgA==
 								</data>
 								<key>Size</key>
-								<integer>114919</integer>
+								<integer>114845</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
