--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-06T15:13:03Z</date>
+						<date>2018-07-09T13:56:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FVzomJx85uU9
-								9zcQAVPTYg==
+								UHt5Z3SQNdxz
+								Kt539aaJRw==
 								</data>
 								<key>Size</key>
-								<integer>154849</integer>
+								<integer>154541</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6T7PRem1OhFI
-								hPh3cJ/vQA==
+								PdkeYWQIkw4O
+								2FEjz/MWhg==
 								</data>
 								<key>Size</key>
-								<integer>106015</integer>
+								<integer>106376</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
