--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-27T16:35:10Z</date>
+						<date>2018-07-09T14:09:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -198,6 +198,16 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3YW7fsJffz3y
+								xSIicOAdcA==
+								</data>
+								<key>Size</key>
+								<integer>553274</integer>
+							</dict>
 							<key>files/stacks-image-b5d4a25-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -252,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mSEEGPZMg5Uo
-								aeWcV9d7+A==
+								03s7s+AS3mgh
+								stSDdWB7jA==
 								</data>
 								<key>Size</key>
-								<integer>119985</integer>
+								<integer>121083</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -272,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6BFQUPQeIBuD
-								hpOLrB4dcA==
+								2a+Uxqteo/fz
+								r+P3ZoiRww==
 								</data>
 								<key>Size</key>
-								<integer>61188</integer>
+								<integer>62146</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
