--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4771,7 +4771,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T13:56:29Z</date>
+						<date>2018-07-09T15:02:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5120,11 +5120,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PdkeYWQIkw4O
-								2FEjz/MWhg==
+								r/ZgZyfKZtps
+								vogSA7MsyA==
 								</data>
 								<key>Size</key>
-								<integer>106376</integer>
+								<integer>106377</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7167,7 +7167,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T14:09:28Z</date>
+						<date>2018-07-09T15:02:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7216,11 +7216,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GCcPrA4m8eBo
-								BN2uGveqCw==
+								DkJA+22y9L7m
+								qQnHRwrBSg==
 								</data>
 								<key>Size</key>
-								<integer>4198</integer>
+								<integer>4134</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7233,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T14:09:28Z</date>
+						<date>2018-07-09T15:02:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8272,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UU94Ku/+iPbb
-								Jjgo1/q23w==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3697</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
