--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T13:56:29Z</date>
+						<date>2018-07-09T15:02:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PdkeYWQIkw4O
-								2FEjz/MWhg==
+								r/ZgZyfKZtps
+								vogSA7MsyA==
 								</data>
 								<key>Size</key>
-								<integer>106376</integer>
+								<integer>106377</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
