--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -4129,7 +4129,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T14:09:28Z</date>
+						<date>2018-07-09T15:13:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4488,11 +4488,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nhlpgShLBXCB
-								welAiDnfgA==
+								P0ga95smLC5J
+								nEIhYXQdrQ==
 								</data>
 								<key>Size</key>
-								<integer>114845</integer>
+								<integer>114864</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4771,7 +4771,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T15:02:31Z</date>
+						<date>2018-07-09T15:13:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5120,11 +5120,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r/ZgZyfKZtps
-								vogSA7MsyA==
+								lP229iBZDF01
+								1Duefndotg==
 								</data>
 								<key>Size</key>
-								<integer>106377</integer>
+								<integer>106396</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
