--- a/vermontcomplexsystems-foundation.rw/Pages/02-Template/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/02-Template/PageAttributes/Contents.plist
@@ -12,11 +12,11 @@
 				<key>ChangedStatuses</key>
 				<dict>
 					<key>default</key>
-					<false/>
+					<true/>
 					<key>sftp:/cmplxsys.w3.uvm.edu/www-root</key>
-					<false/>
+					<true/>
 					<key>sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
-					<false/>
+					<true/>
 				</dict>
 				<key>ColourStyles</key>
 				<dict>
