Home page edits

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7193,7 +7193,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T14:09:28Z</date>
+						<date>2018-07-10T14:53:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8232,11 +8232,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UU94Ku/+iPbb
-								Jjgo1/q23w==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3697</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
