--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6523,7 +6523,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T15:27:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6692,11 +6692,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ir0CdWUc6edW
-								pWPc7MzWtQ==
+								DExxA+MxiGKy
+								zXUGlJqtnw==
 								</data>
 								<key>Size</key>
-								<integer>91522</integer>
+								<integer>91523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7233,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-09T15:02:31Z</date>
+						<date>2018-07-10T15:27:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8272,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								g0U7vFpNhv9+
+								FnAoyWykOA==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3364</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
