--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T15:27:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ir0CdWUc6edW
-								pWPc7MzWtQ==
+								DExxA+MxiGKy
+								zXUGlJqtnw==
 								</data>
 								<key>Size</key>
-								<integer>91522</integer>
+								<integer>91523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
