--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6709,7 +6709,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T15:33:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6978,11 +6978,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+dB8G/88+jMg
-								bZCl+ZUCKA==
+								3RqLY/HMFnZi
+								kBccZkD/Ng==
 								</data>
 								<key>Size</key>
-								<integer>120904</integer>
+								<integer>120905</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7233,7 +7233,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T15:27:10Z</date>
+						<date>2018-07-10T15:33:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8272,11 +8272,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								g0U7vFpNhv9+
-								FnAoyWykOA==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3364</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
