--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-06-25T22:45:43Z</date>
+						<date>2018-07-10T15:33:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -302,11 +302,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+dB8G/88+jMg
-								bZCl+ZUCKA==
+								3RqLY/HMFnZi
+								kBccZkD/Ng==
 								</data>
 								<key>Size</key>
-								<integer>120904</integer>
+								<integer>120905</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
